addons/external-secrets/v0.5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: external-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
      app.kubernetes.io/instance: external-secrets
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/instance: external-secrets
    spec:
      serviceAccountName: external-secrets
      containers:
      - name: external-secrets
        image: "ghcr.io/external-secrets/external-secrets:v0.5.6"
        imagePullPolicy: IfNotPresent
        args:
        - --concurrent=1
        ports:
        - containerPort: 8080
          protocol: TCP
          name: metrics
